# Revenant

./: CMakeLists.txt  README.md
lib/: CDisplayTextFormatting.cpp  CDisplayTextFormatting.h  CItemInfo.cpp  CItemInfo.h  CMiniMap.cpp  CMiniMap.h  CPed.cpp  CPed.h  CPedInventory.cpp  CPedInventory.h  CTaskDataInfo.cpp  CTaskDataInfo.h  Utils.cpp  atFixedArray.h  atRTTI.h  color32.h  datResource.h  flags.h  fwDecorator.cpp  fwDecorator.h  fwRefAwareBase.h  fwScriptGuid.cpp  fwScriptGuid.h  rage.h  sysAllocator.cpp  sysAllocator.h  vector.h
src/: Logger.cpp  Logger.h  ScriptManager.cpp  ScriptManager.h  dllmain.cpp  revenant_pch.h
src/Controllers/: PickupController.cpp  PickupController.h  PlayerController.cpp  PlayerController.h  Script.h
src/GTA/: Control.cpp  Control.h  PlayerSwitch.cpp  PlayerSwitch.h  Sound.cpp  Sound.h
src/GTA.UI/: Screen.cpp  Screen.h  TheFeed.cpp  TheFeed.h
src/GTA/blip/: Blip.cpp  Blip.h
src/GTA/entities/: Entity.cpp  Entity.h  Model.cpp  Model.h  Player.cpp  Player.h  Prop.cpp  Prop.h
src/GTA/entities/peds/: Ped.cpp  Ped.h  PedGroup.cpp  PedGroup.h  PedInventory.cpp  PedInventory.h  Task.cpp  Task.h  TaskInvoker.cpp  TaskInvoker.h
src/GTA/entities/vehicles/: Vehicle.cpp  Vehicle.h
src/GTA/entities/weapons/: Weapon.cpp  Weapon.h
